docs/api/qiskit/0.25/qiskit.aqua.components.neural_networks.GenerativeNetwork.mdx
---
title: GenerativeNetwork (v0.25)
description: API reference for qiskit.aqua.components.neural_networks.GenerativeNetwork in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.neural_networks.GenerativeNetwork
---

<span id="qiskit-aqua-components-neural-networks-generativenetwork" />

# qiskit.aqua.components.neural\_networks.GenerativeNetwork

<Class id="qiskit.aqua.components.neural_networks.GenerativeNetwork" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/aqua/components/neural_networks/generative_network.py" signature="GenerativeNetwork" modifiers="class">
  Base class for generative Quantum and Classical Neural Networks.

  This method should initialize the module, but raise an exception if a required component of the module is not available.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.__init__" signature="__init__()" modifiers="abstract">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                                                                |                                                                                     |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.components.neural_networks.GenerativeNetwork.__init__ "qiskit.aqua.components.neural_networks.GenerativeNetwork.__init__")()                                         | Initialize self.                                                                    |
  | [`get_output`](#qiskit.aqua.components.neural_networks.GenerativeNetwork.get_output "qiskit.aqua.components.neural_networks.GenerativeNetwork.get_output")(quantum\_instance, params, shots)   | Apply quantum/classical neural network to given input and get the respective output |
  | [`loss`](#qiskit.aqua.components.neural_networks.GenerativeNetwork.loss "qiskit.aqua.components.neural_networks.GenerativeNetwork.loss")()                                                     | Loss function used for optimization                                                 |
  | [`set_discriminator`](#qiskit.aqua.components.neural_networks.GenerativeNetwork.set_discriminator "qiskit.aqua.components.neural_networks.GenerativeNetwork.set_discriminator")(discriminator) | Set discriminator network.                                                          |
  | [`set_seed`](#qiskit.aqua.components.neural_networks.GenerativeNetwork.set_seed "qiskit.aqua.components.neural_networks.GenerativeNetwork.set_seed")(seed)                                     | Set seed.                                                                           |
  | [`train`](#qiskit.aqua.components.neural_networks.GenerativeNetwork.train "qiskit.aqua.components.neural_networks.GenerativeNetwork.train")(\[quantum\_instance, shots])                       | Perform one training step w\.r.t to the generator’s parameters                      |

  ## Attributes

  |                                                                                                                                                                              |                                         |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- |
  | [`parameter_values`](#qiskit.aqua.components.neural_networks.GenerativeNetwork.parameter_values "qiskit.aqua.components.neural_networks.GenerativeNetwork.parameter_values") | Get parameter values from the generator |

  ### get\_output

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.get_output" signature="get_output(quantum_instance, params, shots)" modifiers="abstract">
    Apply quantum/classical neural network to given input and get the respective output

    **Parameters**

    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – Quantum Instance, used to run the generator circuit.
    *   **params** (*numpy.ndarray*) – parameters which should be used to run the generator, if None use self.\_params
    *   **shots** (*int*) – if not None use a number of shots that is different from the number set in quantum\_instance

    **Returns**

    Neural network output

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  ### loss

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.loss" signature="loss()" modifiers="abstract">
    Loss function used for optimization
  </Function>

  ### parameter\_values

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.parameter_values" signature="parameter_values" modifiers="abstract property">
    Get parameter values from the generator

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  ### set\_discriminator

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.set_discriminator" signature="set_discriminator(discriminator)" modifiers="abstract">
    Set discriminator network.

    **Parameters**

    **discriminator** (*Discriminator*) – Discriminator used to compute the loss function.

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  ### set\_seed

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.set_seed" signature="set_seed(seed)" modifiers="abstract">
    Set seed.

    **Parameters**

    **seed** (*int*) – seed

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  ### train

  <Function id="qiskit.aqua.components.neural_networks.GenerativeNetwork.train" signature="train(quantum_instance=None, shots=None)" modifiers="abstract">
    Perform one training step w\.r.t to the generator’s parameters

    **Parameters**

    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – used to run generator network. Ignored for a classical network.
    *   **shots** (*int*) – Number of shots for hardware or qasm execution. Ignored for classical network

    **Returns**

    generator loss and updated parameters.

    **Return type**

    dict

    **Raises**

    **NotImplementedError** – not implemented
  </Function>
</Class>

